[project]
name = "conversationalrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "qdrant-client>=1.7.0",
    "openai>=1.13.0",
    "python-dotenv>=1.2.1",
    "llama-index>=0.10.0",
    "llama-index-readers-file>=0.1.0",
    "langchain-openai>=0.1.0",
    "speechmatics-tts>=1.0.0",
    "speechmatics-python>=1.8.1",
    "inngest>=0.21.0",
    "flask==1.1.4",
    "flask-sockets>=0.2.1",
    "markupsafe==2.0.0",
]
