[project]
name = "conversationalrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "httpx",
    "qdrant-client",
    "openai",
    "python-dotenv",
    "llama-index",
    "llama-index-readers-file",
    "langchain-openai",
    "speechmatics-tts",
    "speechmatics-python",
    "markupsafe",
]
